# robot_voice_control

./: .gitignore  Dockerfile  README.md  install.sh  requirements.txt
order_executor/: CMakeLists.txt  package.xml
order_executor/config/: mbdemo_orders.yaml
order_executor/include/: ActionSrv.hpp  Executor.hpp  MoveBaseExec.hpp  RosMath.hpp
order_executor/launch/: mbgoal_demo.launch
order_executor/nodes/: mbgoal_demo.cpp
order_executor/src/: ActionSrv.cpp  Executor.cpp  MoveBaseExec.cpp  RosMath.cpp
orders_supervisor/: CMakeLists.txt  package.xml
orders_supervisor/action/: Order.action
orders_supervisor/include/: OrdersContainer.hpp  OrdersSupervisor.hpp
orders_supervisor/launch/: orders_supervisor.launch
orders_supervisor/msg/: OrderFeedbackSimple.msg  Orders.msg  OrdersFeedback.msg
orders_supervisor/nodes/: main.cpp
orders_supervisor/src/: OrdersContainer.cpp  OrdersSupervisor.cpp
orders_supervisor/srv/: CancelOrder.srv  ShiftOrder.srv
txt_to_orders/: CMakeLists.txt  package.xml
txt_to_orders/launch/: txt_to_orders.launch
txt_to_orders/src/: Data.py  TxtToOrders.py  common.py  main.py
txt_to_orders/src/converter/: CaseWrapper.py  Converter.py  math.py
txt_to_orders/srv/: TxtToOrdersSrv.srv
voice_control/: CMakeLists.txt  package.xml
voice_control/launch/: rosbot.launch  rosbot_pro.launch  voice_control.launch  voice_control_gazebo.launch  voice_control_standalone.launch
voice_webserver/: CMakeLists.txt  package.xml
voice_webserver/launch/: voice_webserver.launch
voice_webserver/scripts/: start_chrome.sh  start_webclient.sh  start_webserver.sh
voice_webserver/src/: package.json  server.js
voice_webserver/src/config/: default.json
voice_webserver/src/public/: index.html
voice_webserver/src/scripts/: vw_config.py
voice_webserver/src/server/: dictionary-match.js  ros.js
voice_webserver/src/src/: App.js  Containers.js  Table.js  index.css
