<?xml version="1.0"?>
<package format="2">
  <name>orders_supervisor</name>
  <version>0.0.0</version>
  <description>The orders_supervisor package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>


  <license>TODO</license>

  <build_depend>message_generation</build_depend> 
  <build_depend>actionlib_msgs</build_depend> 
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

   <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>roscpp</exec_depend>  
  <exec_depend>actionlib</exec_depend> 
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 


  <buildtool_depend>catkin</buildtool_depend>
  


</package>